--- a/StardewVally_SaveFileSync/StardewVally_SaveFileSync.csproj
+++ b/StardewVally_SaveFileSync/StardewVally_SaveFileSync.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\ToDoList\Newtonsoft.Json.dll</HintPath>
     </Reference>
