--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 StardewVally_SaveFileSync/bin/Release/net5.0-windows/config.json
 StardewVally_SaveFileSync/bin/Debug/net5.0-windows/config.json
 StardewVally_Server/dataBases/Storage
+StardewVally_SaveFileSync/Config.cs
