--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ StardewVally_SaveFileSync/bin/Release/net5.0-windows/config.json
 StardewVally_SaveFileSync/bin/Debug/net5.0-windows/config.json
 StardewVally_Server/dataBases/Storage
 StardewVally_SaveFileSync/Config.cs
-StardewVally_SaveFileSync\.vs
+StardewVally_SaveFileSync/.vs
