--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ StardewVally_SaveFileSync/bin/Debug/net5.0-windows/config.json
 StardewVally_Server/dataBases/Storage
 StardewVally_SaveFileSync/Config.cs
 .vs
+StardewVally_SaveFileSync/bin/Debug
